Refactor to XDG Base Directory compliance
- Move all config files to ~/.config/ following XDG spec
- Update Ansible playbooks for better organization and error handling
- Add XDG environment setup with proper directory structure
- Update font configuration to use Dina consistently
- Add newsboat configuration with YouTube/mpv integration
- Improve Makefile with additional targets and better organization
- Update README with comprehensive documentation
- Add ansible.cfg for consistent configuration
- Create site.yaml as main playbook with tagged imports

--- a/config.yaml
+++ b/config.yaml
@@ -1,21 +1,27 @@
 - hosts: localhost
   gather_facts: false
+  become: true
   tasks:
-    
     - name: Create .config folder
       ansible.builtin.file:
         path: /home/{{ lookup('env', 'DOAS_USER') }}/.config
         state: directory
         owner: "{{ lookup('env', 'DOAS_USER') }}"
         group: "{{ lookup('env', 'DOAS_USER') }}"
+        mode: '0755'
 
     - name: Symlink .config folder
       synchronize:
         src: '{{ playbook_dir }}/config/'
         dest: "/home/{{ lookup('env', 'DOAS_USER') }}/.config/"
-    
-    - name: Symlink .shh/config file
-      synchronize:
+        delete: true
+        recursive: true
+
+    - name: Symlink .ssh/config file
+      ansible.builtin.file:
         src: '{{ playbook_dir }}/config/ssh/config'
-        dest: "/home/{{ lookup('env', 'DOAS_USER') }}/.ssh/config/"
+        dest: "/home/{{ lookup('env', 'DOAS_USER') }}/.ssh/config"
+        state: link
+        owner: "{{ lookup('env', 'DOAS_USER') }}"
+        group: "{{ lookup('env', 'DOAS_USER') }}"
 
