Fix issue where playbook won't overwrite existing files

--- a/config.yaml
+++ b/config.yaml
@@ -22,6 +22,7 @@
         src: '{{ playbook_dir }}/config/ssh/config'
         dest: "/home/{{ lookup('env', 'DOAS_USER') }}/.ssh/config"
         state: link
+        force: true
         owner: "{{ lookup('env', 'DOAS_USER') }}"
         group: "{{ lookup('env', 'DOAS_USER') }}"
 
