--- a/cwm.yaml
+++ b/cwm.yaml
@@ -18,6 +18,7 @@
         src: "{{ playbook_dir }}/config/xsession"
         dest: "/home/{{ lookup('env', 'DOAS_USER') }}/.xsession"
         state: link
+        force: true
         owner: "{{ lookup('env', 'DOAS_USER') }}"
         group: "{{ lookup('env', 'DOAS_USER') }}"
 
@@ -26,6 +27,7 @@
         src: "{{ playbook_dir }}/config/{{ item.src }}"
         dest: "/home/{{ lookup('env', 'DOAS_USER') }}/{{ item.dest }}"
         state: link
+        force: true
         owner: "{{ lookup('env', 'DOAS_USER') }}"
         group: "{{ lookup('env', 'DOAS_USER') }}"
       loop:
