Fix syntax errors in playbook and ignore non YAML files

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,9 +1,13 @@
 [defaults]
 # Basic settings
 host_key_checking = False
-inventory = localhost,
+inventory = inventory.ini
 gathering = smart
 fact_caching = memory
+
+# File exclusions
+inventory_ignore_extensions = .md, .txt, .log, .pyc, .pyo, .pyd, .so, .dylib, .dll, .exe
+inventory_ignore_patterns = ^LICENSE$, ^README\.md$, ^Makefile$, ^\.git/.*$, ^bin/.*$, ^rc/.*$
 
 # Performance
 forks = 10
@@ -32,3 +36,8 @@ become_ask_pass = False
 [ssh_connection]
 ssh_args = -o ControlMaster=auto -o ControlPersist=60s
 pipelining = True
+
+[inventory]
+# Ignore non-inventory files
+ignore_extensions = .md, .txt, .log, .pyc, .pyo, .pyd, .so, .dylib, .dll, .exe
+ignore_patterns = ^LICENSE$, ^README\.md$, ^Makefile$, ^\.git/.*$, ^bin/.*$, ^rc/.*$
