Fix symlink permissions

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -15,7 +15,8 @@ timeout = 30
 pipelining = True
 
 # Output
-stdout_callback = yaml
+stdout_callback = default
+result_format = yaml
 bin_ansible_callbacks = True
 
 # Logging
