--- a/packages.yaml
+++ b/packages.yaml
@@ -1,5 +1,6 @@
 - hosts: localhost
   gather_facts: false
+  become: true
   tasks:
     - name: Install packages
       command: pkg_add {{ item }}
