Symlink follow disable

--- a/config.yaml
+++ b/config.yaml
@@ -23,4 +23,5 @@
         dest: "/home/{{ lookup('env', 'DOAS_USER') }}/.ssh/config"
         state: link
         force: true
+        follow: false
 
