--- a/cwm.yaml
+++ b/cwm.yaml
@@ -19,6 +19,7 @@
         dest: "/home/{{ lookup('env', 'DOAS_USER') }}/.xsession"
         state: link
         force: true
+        follow: false
 
     - name: Install X11 configuration files
       ansible.builtin.file:
@@ -26,6 +27,7 @@
         dest: "/home/{{ lookup('env', 'DOAS_USER') }}/{{ item.dest }}"
         state: link
         force: true
+        follow: false
       loop:
         - { src: "X11/Xresources", dest: ".config/X11/Xresources" }
         - { src: "cwm/cwmrc", dest: ".config/cwm/cwmrc" }
