Fix force option on config playbook

--- a/config.yaml
+++ b/config.yaml
@@ -16,6 +16,7 @@
         dest: "/home/{{ lookup('env', 'DOAS_USER') }}/.config/"
         delete: true
         recursive: true
+        force: true
 
     - name: Symlink .ssh/config file
       ansible.builtin.file:
